# companyctx

./: .gitignore  .pip-audit.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
companyctx/: __init__.py  cache.py  cli.py  config.py  core.py  extract.py  http.py  robots.py  schema.py  security.py
companyctx/migrations/: 0001_initial.sql  __init__.py
companyctx/providers/: __init__.py  base.py  reviews_google_places.py  site_text_trafilatura.py  smart_proxy_base.py  smart_proxy_http.py
decisions/: 2026-04-20-name-change-to-companyctx.md  2026-04-20-skill-md-not-mcp.md  2026-04-20-zero-key-stealth-strategy.md  2026-04-21-v0.1.0-release-readiness.md  2026-04-23-reviews-provider-selection.md
docs/: ARCHITECTURE.md  EXTRACTION-STRATEGY.md  OSS-HYGIENE.md  PROVIDERS.md  REFERENCES.md  RISK-REGISTER.md  SCHEMA.md  SPEC.md  THREAT-MODEL.md  VALIDATION.md  ZERO-KEY.md
examples/: 01-basic-fetch.sh  02-jq-filtering.sh  03-brains-and-muscles.sh  04-sales-meeting-prep.sh  05-pe-rollup-screener.sh  06-competitor-monitor.py  08-support-ticket-context.py  README.md  d100-integration.md  partner-integration.md
examples/07-inbound-webhook-enrichment/: README.md  main.py  requirements.txt
fixtures/: README.md  durability-report-2026-04-21-partial.md  durability-report-2026-04-21.md  seeds.csv
fixtures/acme-bakery/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/anchor-fitness/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/apex-auto/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/birmingham-iv-04/: SOURCE.md  about.html  expected.json  google_places.json  homepage.html  raw_observations.json  services.html  yelp.json  youtube.json
fixtures/bluepeak-agency/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/brightsmile-dental/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/brooklyn-loaves-bakery/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/canopy-agency/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/cary-hormone-02/: SOURCE.md  about.html  expected.json  google_places.json  homepage.html  raw_observations.json  services.html  yelp.json  youtube.json
fixtures/cedarpark-dental/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/charleston-medspa-05/: .hand-curated  SOURCE.md  about.html  expected.json  google_places.json  homepage.html  raw_observations.json  services.html  yelp.json
fixtures/coastal-fitness/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/cornerstone-bakery/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/elmwood-dental/: about.html  expected.json  google_places.json  homepage.html  services.html  yelp.json  youtube.json
fixtures/empty-response/: expected.json
fixtures/fm13-timeout-smb-01/: expected.json  fixture-block.txt
fixtures/fm6-js-redirect-root/: expected.json
fixtures/fm6-maintenance-page/: expected.json
fixtures/fm7-js-redirect-root/: expected.json
fixtures/fm7-maintenance-page/: expected.json  homepage.html
fixtures/fm7-thin-bariatric-01/: expected.json  homepage.html
fixtures/fm7-thin-botox-01/: expected.json  homepage.html
fixtures/fm7-thin-chiropractic-01/: expected.json  homepage.html
fixtures/fm7-thin-dentistry-01/: expected.json  homepage.html
research/: 2026-04-21-durability-sample-raw.jsonl  2026-04-21-funnel-and-monetization-strategy.md  2026-04-21-market-expansion-use-cases.md  2026-04-21-tls-impersonation-spike-raw.jsonl  2026-04-21-tls-impersonation-spike.md  2026-04-22-v0.2-joel-integration-edge-cases.jsonl  2026-04-22-v0.2-joel-integration-error-codes.jsonl  2026-04-22-v0.2-joel-integration-head-to-head.jsonl  2026-04-22-v0.2-joel-integration-raw.jsonl  2026-04-22-v0.2-joel-integration-validation.md  2026-04-22-wix-webflow-spa-probe-raw.jsonl  2026-04-22-wix-webflow-spa-probe.md  2026-04-23-cox-52-post-fix-reclassification.md  2026-04-23-cox-54-classification.csv  2026-04-23-cox-54-post-v0.4-threshold-fit.md  2026-04-23-cox-58-cache-delta.jsonl  2026-04-23-cox-58-head-to-head-qualitative.jsonl  2026-04-23-cox-58-head-to-head.jsonl  2026-04-23-cox-58-v0.4-raw.jsonl  2026-04-23-reviews-extraction-method-survey.md  2026-04-23-v0.4-partner-integration-revalidation.md  README.md
research_pack/: __init__.py  cache.py  cli.py  config.py  http.py  schema.py
scripts/: build-fixtures.py  cox54-build-sample.py  cox54-classify.py  cox58-analyze.py  cox58-build-sample.py  cox58-cache-analyze.py  cox58-export-grade-pack.py  cox58-grade-head-to-head.py  cox58-harness.py  cox58-map-briefs.py  pip_audit_ignores.py  probe_reviews.py  promote-fm7-thin-fixtures.py  run-durability-batch.py  run-error-codes.py  run-shape-probe.py
tests/: conftest.py  test_cache.py  test_contracts.py  test_core_orchestrator.py  test_cox52_thin_body_acceptance.py  test_entry_point_registration.py  test_envelope_error_codes.py  test_envelope_schema.py  test_fixtures_corpus.py  test_golden_corpus.py  test_public_api.py  test_real_golden_corpus.py  test_regression_corpus.py  test_reviews_google_places.py  test_schema_verb.py  test_security_fetch.py  test_security_robots.py  test_security_url.py  test_shape_probe.py  test_smart_proxy_base.py  test_smart_proxy_http.py  test_smoke.py  test_tech_fingerprint.py
(+183 files in other folders)
